php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #37176 iconv_strpos fails to find a string
Submitted: 2006-04-24 02:26 UTC Modified: 2006-05-01 14:12 UTC
From: lana0 at zahav dot net dot il Assigned: moriyoshi (profile)
Status: Closed Package: ICONV related
PHP Version: 5.1.2 OS: XP SP2
Private report: No CVE-ID: None
 [2006-04-24 02:26 UTC] lana0 at zahav dot net dot il
Description:
------------
The next statements return FALSE (and should return 1):
echo iconv_strpos('11--','1-',0,'UTF-8');
echo iconv_strpos('-11--','1-',0,'UTF-8');

.i.e it fails if the first char of a searched string comes
doubled in parsed one.



Reproduce code:
---------------
echo iconv_strpos('11--','1-',0,'UTF-8');
echo iconv_strpos('-11--','1-',0,'UTF-8');

Expected result:
----------------
1
2

Actual result:
--------------
FALSE
FALSE

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-04-24 19:52 UTC] tony2001@php.net
Assigned to the maintainer.
 [2006-04-28 05:12 UTC] moriyoshi@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.1-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.1-win32-latest.zip


 [2006-05-01 14:12 UTC] lana0 at zahav dot net dot il
I see now it works right.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 17:00:02 2026 UTC