- Fix bug #37176 (iconv_strpos() fails to find a string)